src/objects/Discretionary_Line_Item_Approval_History__c/Discretionary_Line_Item_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Discretionary Line Item Approval History</label>
    <nameField>
        <displayFormat>DLI-{0000}</displayFormat>
        <label>Discretionary Line Item Approval History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discretionary Line Item Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>