src/objects/Discretionary_Line_Item_Approval_History__c/fields/AccountOpenerEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountOpenerEmail__c</fullName>
    <label>AccountOpenerEmail</label>
    <type>Email</type>
</CustomField>