src/objects/Discretionary_Line_Item_Approval_History__c/fields/Discretionary_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Line_Item__c</fullName>
    <label>Discretionary Line Item</label>
    <referenceTo>Discretionary_Line_Item__c</referenceTo>
    <relationshipLabel>Discretionary Line Item Approval History</relationshipLabel>
    <relationshipName>Discretionary_Line_Item_Approval_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>