src/objects/Discretionary_Line_Item_Approval_History__c/fields/Record_Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Data_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record Data Owner is business process data owner responsible to review/approve record for removal or retention.</description>
    <inlineHelpText>Record Data Owner is business process data owner responsible to review/approve record for removal or retention.</inlineHelpText>
    <label>Record Data Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discretionary Line Item Approval History</relationshipLabel>
    <relationshipName>Discretionary_Line_Item_Approval_History</relationshipName>
    <type>Lookup</type>
</CustomField>